Adding static resources. Closes #17

--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>List of Owners</title>
 </head>
+<!--/*@thymesVar id="owner" type="com.croga.petclinic.model.Owner"*/-->
 <body>
     <h1 th:text="'List of Owners'"></h1>
 
@@ -16,6 +17,7 @@
         </tr>
         </thead>
         <tbody>
+        <!--/*@thymesVar id="owners" type=""*/-->
         <tr th:each="owner : ${owners}">
             <td th:text="${owner.id}">1</td>
             <td th:text="${owner.firstName}">Joe</td>
