--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>List of Vets</title>
 </head>
+<!--/*@thymesVar id="vet" type="com.croga.petclinic.model.Vet"*/-->
 <body>
     <h1 th:text="'List of Vets'"></h1>
     <table>
