--- a/pet-clinic-web/src/main/resources/templates/index.html
+++ b/pet-clinic-web/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
     <title>Pet Clinic Index</title>
 </head>
 <body>
-    <h2 th:text="#{welcome}">Index Page</h2>
+    <h2 th:text="#{welcome}"></h2>
 
     <div class="row">
         <div class="col-md-12">
