--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'owners')}">
 <head>
     <meta charset="UTF-8">
     <title>List of Vets</title>
 </head>
 <!--/*@thymesVar id="vet" type="com.croga.petclinic.model.Vet"*/-->
 <body>
-    <h1 th:text="'List of Vets'"></h1>
-    <table>
+    <h2 th:text="#{vets}"></h2>
+    <table id="vets" class="table table-striped">
         <thead>
         <tr>
             <th>Id</th>
