Implemented Find Owner. Closes #54

--- a/pet-clinic-web/src/main/resources/templates/owners/findOwners.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/findOwners.html
@@ -5,6 +5,7 @@
 
 <h2>Find Owners</h2>
 
+<!--/*@thymesVar id="owner" type="com.croga.petclinic.model.Owner"*/-->
 <form th:object="${owner}" th:action="@{/owners}" method="get"
       class="form-horizontal" id="search-owner-form">
     <div class="form-group">
