--- a/pet-clinic-web/src/main/resources/templates/owners/ownersList.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/ownersList.html
@@ -6,6 +6,7 @@
 
 <h2>Owners</h2>
 
+<!--/*@thymesVar id="owner" type="com.croga.petclinic.model.Owner"*/-->
 <table id="owners" class="table table-striped">
     <thead>
     <tr>
