--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -5,21 +5,24 @@
     <title>List of Vets</title>
 </head>
 <!--/*@thymesVar id="vet" type="com.croga.petclinic.model.Vet"*/-->
+<!--/*@thymesVar id="specialty" type="com.croga.petclinic.model.Specialty"*/-->
 <body>
     <h2 th:text="#{vets}"></h2>
     <table id="vets" class="table table-striped">
         <thead>
         <tr>
-            <th>Id</th>
-            <th>First Name</th>
-            <th>Last Name</th>
+            <th>Name</th>
+            <th>Specialties</th>
         </tr>
         </thead>
         <tbody>
         <tr th:each="vet : ${vets}">
-            <td th:text="${vet.id}">1</td>
-            <td th:text="${vet.firstName}">Joe</td>
-            <td th:text="${vet.lastName}">Buck</td>
+            <td th:text="${vet.firstName} + ' ' + ${vet.lastName}">Joe Buck</td>
+            <td>
+            <span th:each="specialty : ${vet.specialties}"
+                th:text="${specialty.description + ' '}" />
+                <span th:if="${vet?.specialties?.size() == 0}">none<</span>
+            </td>
         </tr>
         </tbody>
     </table>
